--- a/uniapp/package.json
+++ b/uniapp/package.json
@@ -8,6 +8,8 @@
   },
   "devDependencies": {},
   "scripts": {
+    "dev:h5": "cross-env NODE_ENV=development UNI_PLATFORM=h5 vue-cli-service serve",
+    "build:h5": "cross-env NODE_ENV=production UNI_PLATFORM=h5 vue-cli-service build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
