--- a/uniapp/.hbuilderx/launch.json
+++ b/uniapp/.hbuilderx/launch.json
@@ -3,7 +3,7 @@
     "configurations" : [
         {
             "customPlaygroundType" : "device",
-            "playground" : "custom",
+            "playground" : "standard",
             "type" : "uni-app:app-android"
         },
         {
