--- a/API/docker/nginx/nginx.conf
+++ b/API/docker/nginx/nginx.conf
@@ -25,6 +25,14 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
+    location /uploads/ {
+        alias /var/www/public/uploads/;
+        try_files $uri =404;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        access_log off;
+    }
+
     error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
 }
