--- a/admin/.env.development
+++ b/admin/.env.development
@@ -4,6 +4,9 @@ ENV = 'development'
 # base api
 VUE_APP_BASE_API = '/admin-api'
 
+# API target for development - hongbiennhanh.xyz
+VUE_APP_API_URL = 'https://hongbiennhanh.xyz'
+
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
 # It only does one thing by converting all import() to require().
