--- a/admin/nginx.conf
+++ b/admin/nginx.conf
@@ -8,7 +8,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name hongbiennhanh.online www.hongbiennhanh.online;
 
         root /usr/share/nginx/html;
         index index.html;
