--- a/api/docker/nginx/nginx.conf
+++ b/api/docker/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name hongbiennhanh.xyz www.hongbiennhanh.xyz;
     root /var/www/public;
     index index.php index.html index.htm;
 
