--- a/admin/.env.production
+++ b/admin/.env.production
@@ -2,4 +2,5 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = '/api'
+VUE_APP_BASE_API = '/admin-api'
+VUE_APP_API_URL = 'https://hongbiennhanh.xyz'
