--- a/admin/nginx.conf
+++ b/admin/nginx.conf
@@ -15,7 +15,7 @@ http {
 
         # Proxy API requests to the API server
         location /admin-api/ {
-            proxy_pass http://host.docker.internal:8000/admin-api/v1/;
+            proxy_pass https://hongbiennhanh.xyz/admin-api/v1/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
